# producer-policy

./: .gitignore  cabal.project  hie.yaml  trace-producer-policy.cabal
app/: init-minter-contract.hs  make-all.hs  make-cliInput-threadToken.hs  make-cliInput-validator.hs  make-policy.hs  mint-nft.hs
dist-newstyle/cache/: compiler  config  plan.json  source-hashes  up-to-date
dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-a_-69e96f3eceed3ed5.cache  cardano-b_-c0de99f0ccd585cd.cache  cardano-c_-88a67c41a056383c.cache  cardano-c_-e62f2aeae532ef4f.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-n_-17dfc790a23ed210.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  ekg-forwa_-e7958ca478e40f05.cache  flat-5d3bff3e9951fc1.cache  goblins-7fe4f5e9bbbd1224.cache  hedgehog-_-d2bdd077e79afffb.cache  iohk-moni_-c7ca6b005d6f76c5.cache  optparse-_-5b3aca9bcb30ab3a.cache  ouroboros_-268d3b2310e5b441.cache  plutus-3b55de0732f6b166.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-fa901c7e00b7f37b.cache  servant-p_-232829bf471577c2.cache
shell/: get-script-adress.sh  init-validator.sh  mintProducerId.sh
shell/.tmp/: mint.signed.tx  mint.unsigned.tx  prodId-mint.signed.tx  prodId-mint.unsigned.tx
shell/local/: init-validator-def.sh  mintProducerId-def.sh
src/Trace/: MinterContract.hs  Policy.hs  ThreadTokenPolicy.hs  TweetPolicy.hs  Utils.hs
src/Trace/MinterContract/: Datum.hs  Redeemer.hs
src/Trace/Plutus/: Utils.hs
src/Trace/Plutus/Utils/: Asserts.hs  Onchain.hs
src/Trace/Policy/: Types.hs
src/Trace/Utils/: Asserts.hs  Onchain.hs
src/Trace/Utils/Plutarch/: Onchain.hs
src/Trace/Utils/Plutarch/Onchain/: Address.hs  Ctx.hs  Integer.hs  Lists.hs  Map.hs  Maybe.hs  Pair.hs  Require.hs  Tx.hs  Value.hs
src/Trace/Utils/Plutarch/Onchain/Ctx/: Datum.hs
src/Trace/Utils/Plutus/: Offchain.hs  Onchain.hs
testnet/: 3e49d56a6970af57a8b45026abe0ec6fde748b9822370ca94c9263cc-validatorCounter.addr  counter-validator.plutus.json  producer-policy.plutus.json  thread-token-policy.hash.txt  thread-token-policy.plutus.json
testnet/addr/: inAddr.addr  inAddr.skey  inAddr.vkey  outAddr.addr  outAddr.skey  outAddr.vkey
