cabal-version:      2.4
name:               trace-producer-policy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michele Nuzzi
maintainer:         michele.nuzzi.2014@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common

    default-language: Haskell2010

    ghc-options:
        -- avoids
        --  
        -- GHC Core to PLC plugin: E049:Error: Found invalid marker, not applied correctly in expression plc 
        -fobject-code -fno-ignore-interface-pragmas


library
    import: common
    hs-source-dirs:
        src

    build-depends:
        , base ^>= 4.14.1.0
        , bytestring
        , text
        , containers
        , mtl
        , template-haskell >= 2.16.0.0
        , aeson
        , serialise

        , prettyprinter
        , pretty-show
        , pretty-simple
        , lens -any

        , cardano-api
        , cardano-ledger-core
        , cardano-ledger-alonzo
        , cardano-crypto-class

        , plutus-core
        , plutus-tx
        , plutus-tx-plugin
        , plutus-ledger
        , plutus-ledger-api
        , plutus-ledger-constraints
        , plutus-chain-index
        , plutus-chain-index-core
        , plutus-contract
        , plutus-contract-certification
        , plutus-example
        , plutus-pab
        , plutus-pab-executables
        
    exposed-modules:
        Trace.Policy,
        Trace.MinterContract,
        Trace.Utils

    other-modules:
        Trace.Utils.Asserts

executable trace-producer-policy
    import: common
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        mtl,
        trace-producer-policy
    hs-source-dirs:   app
