cabal-version:      2.4
name:               trace-producer-policy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michele Nuzzi
maintainer:         michele.nuzzi.2014@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common

    default-language: Haskell2010

    ghc-options:
        -- avoids
        -- 
        -- general errors dued to ```plutus-tx-plugin```
        -- reason: GHC changes the names, this options prevents that
        -fno-specialise

        -- avoids
        --  
        -- GHC Core to PLC plugin: E049:Error: Found invalid marker, not applied correctly in expression plc 
        -fobject-code -fno-ignore-interface-pragmas

        -- avoids
        -- other plugins errors
        -- see `http://0.0.0.0:8002/plutus/troubleshooting.html#plugin-errors`
        -fno-strictness -fno-omit-interface-pragmas

        -- igores errors from ```plutus-tx-plugin``` lib
        -- see `http://0.0.0.0:8002/plutus/troubleshooting.html#plugin-errors`
        -fplugin-opt Plutus.Tx.Plugin:defer-errors

common commonExe
    import: common
    hs-source-dirs:   app
    build-depends:
        base,
        mtl,
        trace-producer-policy


library
    import: common
    hs-source-dirs:
        src

    build-depends:
        , base 
        , bytestring
        , text
        , containers
        , mtl
        , template-haskell 
        , aeson
        , serialise

        , prettyprinter
        , pretty-show
        , pretty-simple
        , lens -any

        , cardano-api
        , cardano-ledger-core
        , cardano-ledger-alonzo
        , cardano-crypto-class

        , plutus-core
        , plutus-tx
        , plutus-tx-plugin
        , plutus-ledger
        , plutus-ledger-api
        , plutus-ledger-constraints
        , plutus-chain-index
        , plutus-chain-index-core
        , plutus-contract
        , plutus-contract-certification
        , plutus-example
        , plutus-pab
        , plutus-pab-executables
        
    exposed-modules:
        Trace.Policy,
        Trace.MinterContract,
        Trace.ThreadTokenPolicy,
        Trace.Plutus.Utils,
        Trace.Plutus.Utils.Onchain

    other-modules:
        Trace.Plutus.Utils.Asserts


executable mint-thread-token
    import: common
    import: commonExe
    main-is: mint-thread-token.hs

executable init-minter-contract
    import: common
    import: commonExe
    main-is: init-minter-contract.hs

executable mint-nft
    import: common
    import: commonExe
    main-is: mint-nft.hs