cabal-version:      2.4
name:               trace-producer-policy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michele Nuzzi
maintainer:         michele.nuzzi.2014@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common

    default-language: Haskell2010

    default-extensions:
        NoStarIsType
        BangPatterns
        BinaryLiterals
        ConstrainedClassMethods
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        DoAndIfThenElse
        EmptyCase
        EmptyDataDecls
        EmptyDataDeriving
        ExistentialQuantification
        ExplicitForAll
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        GADTSyntax
        GeneralisedNewtypeDeriving
        HexFloatLiterals
        ImplicitPrelude
        InstanceSigs
        KindSignatures
        LambdaCase
        MonomorphismRestriction
        MultiParamTypeClasses
        NamedFieldPuns
        NamedWildCards
        NumericUnderscores
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        PostfixOperators
        RankNTypes
        RelaxedPolyRec
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        TraditionalRecordSyntax
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
        ViewPatterns

    ghc-options:
        -- avoids
        -- 
        -- general errors dued to ```plutus-tx-plugin```
        -- reason: GHC changes the names, this options prevents that
        -fno-specialise

        -- avoids
        --  
        -- GHC Core to PLC plugin: E049:Error: Found invalid marker, not applied correctly in expression plc 
        -fobject-code -fno-ignore-interface-pragmas

        -- avoids
        -- other plugins errors
        -- see `http://0.0.0.0:8002/plutus/troubleshooting.html#plugin-errors`
        -fno-strictness -fno-omit-interface-pragmas

        -- igores errors from ```plutus-tx-plugin``` lib
        -- see `http://0.0.0.0:8002/plutus/troubleshooting.html#plugin-errors`
        -fplugin-opt Plutus.Tx.Plugin:defer-errors

common commonExe
    import: common
    hs-source-dirs:   app
    build-depends:
        base,
        mtl,
        bytestring,
        plutarch-Trace

library
    import: common
    hs-source-dirs:
        src

    build-depends:
        , plutarch
        , generics-sop
        , sop-core

        , base 
        , bytestring
        , text
        , containers
        , mtl
        , template-haskell 
        , aeson
        , serialise

        , prettyprinter
        , pretty-show
        , pretty-simple
        , lens -any

        , cardano-api
        , cardano-ledger-core
        , cardano-ledger-alonzo
        , cardano-crypto-class

        , plutus-core
        , plutus-tx
        , plutus-tx-plugin
        , plutus-ledger
        , plutus-ledger-api
        
        , plutus-ledger-constraints

        , plutus-chain-index
        , plutus-chain-index-core
        , plutus-contract
        , plutus-pab
        , plutus-pab-executables
        
    exposed-modules:
          Trace.TweetPolicy
        , Trace.MinterContract
        , Trace.MinterContract.Datum
        , Trace.MinterContract.Redeemer
        , Trace.ThreadTokenPolicy
        , Trace.Utils
        , Trace.Utils.Onchain
        , Trace.Utils.Plutarch.Onchain
        , Trace.Utils.Plutarch.Onchain.Ctx
        , Trace.Utils.Plutarch.Onchain.Ctx.Datum
        , Trace.Utils.Plutarch.Onchain.Lists
        , Trace.Utils.Plutarch.Onchain.Map
        , Trace.Utils.Plutarch.Onchain.Maybe
        , Trace.Utils.Plutarch.Onchain.Value
        , Trace.Utils.Plutarch.Onchain.Address
        , Trace.Utils.Plutarch.Onchain.Require
        , Trace.Utils.Plutarch.Onchain.Pair
        , Trace.Utils.Plutarch.Onchain.Integer
        , Trace.Utils.Plutarch.Onchain.Tx


executable make-all
    import: common
    import: commonExe
    main-is: make-all.hs

    build-depends:
        , plutarch
        , generics-sop
        , sop-core

        , base 
        , bytestring
        , text
        , containers
        , mtl
        , template-haskell 
        , aeson
        , serialise

        , prettyprinter
        , pretty-show
        , pretty-simple
        , lens -any

        , cardano-api
        , cardano-ledger-core
        , cardano-ledger-alonzo
        , cardano-crypto-class

        , plutus-core
        , plutus-tx
        , plutus-tx-plugin
        , plutus-ledger
        , plutus-ledger-api
        
        , plutus-ledger-constraints

        , plutus-chain-index
        , plutus-chain-index-core
        , plutus-contract
        , plutus-pab
        , plutus-pab-executables